HOSTEL-16 Эксперименты с пайплайном

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,5 +25,7 @@ springdoc:
     enabled: true
 
 schedules:
-  file:
+  timeslots:
     path: src/main/java/ru/tpu/hostel/schedules/schedules/schedules.json
+  kitchen:
+    path: rooms.json
