--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+          fetch-depth: 0
       - name: Cache SonarQube packages
         uses: actions/cache@v4
         with:
@@ -29,11 +29,11 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
 
-  # Джоб для сборки и запуска тестов
+  # Джоб для обычной сборки и тестирования
   build_and_test:
     name: Build and Run Tests
     runs-on: ubuntu-latest
-    needs: cache  # Этот джоб будет запускаться после того, как кеш будет готов
+    needs: cache
     steps:
       - uses: actions/checkout@v4
         with:
@@ -44,13 +44,59 @@ jobs:
           java-version: 17
           distribution: 'zulu'
       - name: Build and test with Gradle
-        run: ./gradlew clean test
+        run: | 
+          ./gradlew clean build
+          ./gradlew clean test
+      - name: Assemble
+        run: ./gradlew assemble
+
+  # Джоб для запуска приложения в Docker и повторного тестирования
+  dockerized_tests:
+    name: Run Tests in Docker
+    runs-on: ubuntu-latest
+    needs: build_and_test
+    steps:
+      - uses: actions/checkout@v4
+
+      # Устанавливаем Docker Compose
+      - name: Set up Docker Compose
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y docker-compose
+
+      # Сборка проекта и запуск тестов
+      - name: Build and run tests (assemble .jar and run tests)
+        run: ./gradlew assemble  # Собираем и запускаем тесты
+
+      # Стартуем сервисы в Docker
+      - name: Build and start services in Docker
+        run: docker-compose -f docker-compose-test.yml up --build -d
+
+      # Ждем, пока контейнеры не будут готовы
+      - name: Wait for services to be healthy
+        run: |
+          echo "Waiting for services to be healthy..."
+          sleep 20
+
+      # Проверка логов контейнера
+      - name: Check if container is running
+        run: |
+          docker ps -a
+          docker logs my-app
+
+      # Запуск тестов внутри Docker
+      - name: Run tests inside Docker
+        run: docker exec my-app /app/gradlew test
+
+      # Остановка и удаление контейнеров
+      - name: Stop and remove containers
+        run: docker-compose -f docker-compose-test.yml down
 
   # Джоб для анализа SonarQube
   sonar_analysis:
     name: SonarQube Analysis
     runs-on: ubuntu-latest
-    needs: build_and_test  # Этот джоб будет запускаться после завершения тестов
+    needs: dockerized_tests
     steps:
       - uses: actions/checkout@v4
         with:
@@ -64,3 +110,35 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: ./gradlew build sonarqube --info
+#
+#  # Джоб для сканирования безопасности
+#  security_scan:
+#    name: CodeQL Security Scan
+#    runs-on: ubuntu-latest
+#    needs: sonar_analysis
+#    permissions:
+#      security-events: write
+#    env:
+#      CODEQL_SOURCE_ROOT: src
+#    steps:
+#      - uses: actions/checkout@v4
+#        with:
+#          fetch-depth: 0
+#
+#      # Сборка проекта перед анализом
+#      - name: Build project
+#        run: |
+#          ./gradlew assemble
+#          ./gradlew build
+#
+#      # Инициализация CodeQL (обновлено до v3)
+#      - name: Initialize CodeQL
+#        uses: github/codeql-action/init@v3
+#        with:
+#          languages: java
+#          source-root: src
+#
+#      # Выполнение анализа CodeQL (обновлено до v3)
+#      - name: Perform CodeQL Analysis
+#        uses: github/codeql-action/analyze@v3
+
