--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,16 +9,34 @@ management:
   endpoint:
     health:
       show-details: always
+  tracing:
+    enabled: true
+    sampling:
+      probability: 1.0
+  otlp:
+    tracing:
+      endpoint: http://localhost:4317
+
+logging:
+  level:
+    org.hibernate: OFF
 
 spring:
+  application:
+    name: schedules-service
   profiles:
     active: "@activatedProperties@"
 
   jpa:
-    show-sql: true
+    hibernate:
+      ddl-auto: validate
     properties:
       hibernate:
-        format_sql: true
+        jdbc:
+          batch_size: 50
+          order_inserts: true
+          order_updates: true
+        generate_statistics: false
 
   datasource:
     url: jdbc:postgresql://hostelDB:5432/hostelService
@@ -31,6 +49,11 @@ spring:
       locations:
         - db.migration
     schemas: schedules
+
+  rabbitmq:
+    listener:
+      direct:
+        observation-enabled: true
 
 rabbitmq:
   timeslots:
