--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,9 @@ plugins {
     id 'jacoco'
 }
 
+def env = new Properties()
+file("repository-config.env").withInputStream { env.load(it) }
+
 group = 'ru.tpu.hostel'
 version = '0.0.1-SNAPSHOT'
 
@@ -24,6 +27,16 @@ configurations {
 
 repositories {
     mavenCentral()
+
+    maven {
+        url "http://82.202.138.26:8081/repository/internal/"
+        allowInsecureProtocol = true
+        credentials {
+            username = env['username']
+            password = env['password']
+        }
+    }
+
 }
 
 sonarqube {
@@ -40,6 +53,11 @@ sonarqube {
 }
 
 dependencies {
+
+    implementation 'ru.tpu.hostel:hostel-core:1.0.2'
+    implementation 'ru.tpu.hostel:hostel-feign:1.0.2'
+
+
     implementation platform("org.springframework.cloud:spring-cloud-dependencies:2023.0.2")
     //implementation 'ch.qos.logback:logback-core:1.5.13'
     implementation 'commons-io:commons-io:2.14.0'
