--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -100,6 +100,9 @@ jobs:
 
       # Стартуем сервисы в Docker
       - name: Build and start services in Docker
+        env:
+          INTERNAL_REPO_LOGIN: ${{ secrets.INTERNAL_REPO_LOGIN }}
+          INTERNAL_REPO_PASSWORD: ${{ secrets.INTERNAL_REPO_PASSWORD }}
         run: docker-compose -f docker-compose-test.yml up --build -d
 
       # Ждем, пока контейнеры не будут готовы
