--- a/build.gradle
+++ b/build.gradle
@@ -55,8 +55,8 @@ dependencies {
     implementation 'ru.tpu.hostel:hostel-core:1.0.3'
     implementation 'ru.tpu.hostel:hostel-feign:1.0.3'
 
-    implementation platform("org.springframework.cloud:spring-cloud-dependencies:2023.0.2")
-    //implementation 'ch.qos.logback:logback-core:1.5.13'
+    implementation platform("org.springframework.cloud:spring-cloud-dependencies:2023.0.3")
+    implementation 'org.springframework.security:spring-security-crypto:6.4.4'
     implementation 'commons-io:commons-io:2.14.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -66,19 +66,19 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
-    implementation 'org.springframework.boot:spring-boot-starter-actuator' // Для актюаторов
-
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.apache.commons:commons-compress:1.26.0'
-    implementation 'org.apache.poi:poi:5.2.3' // Для работы с .xls файлами
-    implementation 'org.apache.poi:poi-ooxml:5.2.3' // Для работы с .xlsx файлами
-    implementation 'org.apache.commons:commons-collections4:4.4' // Необходимая зависимость
-    implementation 'org.apache.xmlbeans:xmlbeans:5.1.1' // Для работы с .xlsx (XML-структуры)
-
+    implementation 'org.apache.poi:poi:5.2.3'
+    implementation 'org.apache.poi:poi-ooxml:5.4.0'
+    implementation 'org.apache.commons:commons-collections4:4.4'
+    implementation 'org.apache.xmlbeans:xmlbeans:5.1.1'
     implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
-
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+    implementation 'io.micrometer:micrometer-tracing-bridge-otel:1.4.4'
+    implementation 'io.opentelemetry:opentelemetry-exporter-otlp:1.37.0'
+    implementation 'io.micrometer:micrometer-registry-prometheus'
 
     compileOnly 'org.projectlombok:lombok'
 
