Небольшой рефакторинг транзакций

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -84,6 +84,7 @@ otlp:
 rest:
   base-url:
     user-service: http://userservice:8080
+    notification-service: http://notificationservice:8080
 
 springdoc:
   swagger-ui:
