--- a/build.gradle
+++ b/build.gradle
@@ -59,10 +59,14 @@ sonarqube {
     }
 }
 
+ext {
+    set('internalLibraryVersion', "1.2.2")
+}
+
 dependencies {
-    implementation 'ru.tpu.hostel:hostel-core:1.1.1'
-    implementation 'ru.tpu.hostel:hostel-feign:1.1.1'
-    implementation 'ru.tpu.hostel:hostel-amqp:1.1.1'
+    implementation "ru.tpu.hostel:hostel-core:${internalLibraryVersion}"
+    implementation "ru.tpu.hostel:hostel-feign:${internalLibraryVersion}"
+    implementation "ru.tpu.hostel:hostel-amqp:${internalLibraryVersion}"
 
     implementation platform("org.springframework.cloud:spring-cloud-dependencies:2023.0.3")
     implementation 'org.springframework.security:spring-security-crypto:6.4.4'
