--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -90,6 +90,7 @@ rest:
   base-url:
     user-service: http://userservice:8080
     notification-service: http://notificationservice:8080
+    booking-service: http://bookingservice:8080
 
 springdoc:
   swagger-ui:
