--- a/src/main/resources/application-prod.yaml
+++ b/src/main/resources/application-prod.yaml
@@ -11,7 +11,20 @@ schedules:
 rabbitmq:
   timeslots:
     addresses: 82.202.138.26:5672
+  notification-service:
+    addresses: 82.202.138.26:5672
 
 otlp:
   tracing:
     endpoint: http://tempo.monitoring.svc.cluster.local:4317
+
+# На будущее
+#server:
+#  port: 8443
+#  http2:
+#    enabled: true
+#  ssl:
+#    enabled: true
+#    key-store: file:/etc/nginx/keystore2.p12y
+#    key-password: TpaBKa
+#    key-store-type: PKCS12
