--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,23 +2,22 @@ version: '3.9'
 services:
   # Может не стартануть, если уже запущен в сервисе броней (Джаброни) - это нормально
   rabbitmq:
-    image: rabbitmq:3.12-management
+    image: rabbitmq:4.1.0-management
     container_name: rabbitmq
     restart: always
-    environment:
-      RABBITMQ_DEFAULT_USER: schedule
-      RABBITMQ_DEFAULT_PASS: schedule
-      RABBITMQ_DEFAULT_VHOST: schedule-service
     ports:
       - "5672:5672"  # Порт для общения с микросервисами
       - "15672:15672" # Web UI для управления RabbitMQ
+    volumes:
+      - ./config/rabbitmq/definitions.json:/etc/rabbitmq/definitions.json
+      - ./config/rabbitmq/rabbitmq.conf:/etc/rabbitmq/rabbitmq.conf
     healthcheck:
       test: [ "CMD", "rabbitmqctl", "status" ]
       interval: 10s
       retries: 5
       timeout: 5s
     networks:
-        - shared-network
+      - shared-network
 
   schedulesservice:
     container_name: schedulesservice
