--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -24,10 +24,10 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Set up JDK 21
+      - name: Set up JDK 25
         uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165
         with:
-          java-version: 21
+          java-version: 25
           distribution: 'zulu'
           cache: gradle
 
@@ -53,17 +53,19 @@ jobs:
     needs: build
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
-      - name: Set up JDK 21
+      - name: Set up JDK 25
         uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165
         with:
-          java-version: 21
+          java-version: 25
           distribution: 'zulu'
           cache: gradle
       - name: Run tests
         env:
           INTERNAL_REPO_LOGIN: ${{ secrets.INTERNAL_REPO_LOGIN }}
           INTERNAL_REPO_PASSWORD: ${{ secrets.INTERNAL_REPO_PASSWORD }}
-        run: ./gradlew test --no-daemon
+        run: |
+          chmod +x gradlew
+          ./gradlew test --no-daemon
 
   dockerized:
     name: Build and run in Docker
@@ -84,10 +86,10 @@ jobs:
           docker compose -f docker-compose-test.yml pull --quiet
           docker compose -f docker-compose-test.yml up -d
           
-          timeout 30s bash -c 'until curl -f http://localhost:8080/actuator/health; do sleep 2; done'
+          timeout 60s bash -c 'until curl -f http://localhost:8080/actuator/health; do sleep 2; done'
           
           if ! curl -f http://localhost:8080/actuator/health; then
-            echo "Application failed to start within 30 seconds"
+            echo "Application failed to start within 60 seconds"
             exit 1
           fi
           
@@ -101,10 +103,10 @@ jobs:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
         with:
           fetch-depth: 0
-      - name: Set up JDK 21
+      - name: Set up JDK 25
         uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165
         with:
-          java-version: 21
+          java-version: 25
           distribution: 'zulu'
           cache: gradle
       - name: Sonar analysis
@@ -112,7 +114,9 @@ jobs:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           INTERNAL_REPO_LOGIN: ${{ secrets.INTERNAL_REPO_LOGIN }}
           INTERNAL_REPO_PASSWORD: ${{ secrets.INTERNAL_REPO_PASSWORD }}
-        run: ./gradlew sonar --info
+        run: |
+          chmod +x gradlew
+          ./gradlew sonar --info
     continue-on-error: true
 
   deploy:
