--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5430/hostelService
+    url: jdbc:otel:postgresql://localhost:5430/hostelService
 
 rabbitmq:
   timeslots:
@@ -13,7 +13,7 @@ rabbitmq:
 
 otlp:
   tracing:
-    export-enabled: false
+    export-enabled: true
     endpoint: http://localhost:4317
 
 rest:
