--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -13,6 +13,9 @@ management:
     enabled: true
 
 logging:
+  pattern:
+    file: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSSXXX}){faint} %clr(%5level) %clr(${PID:- }){magenta} %clr(---){faint} [%applicationName] [%15.15thread] %clr([%-32X{traceId:-}-%-16X{spanId:-}]){yellow} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %msg%n"
+    console: "%clr(%d{yyyy-MM-dd HH:mm:ss.SSSXXX}){faint} %clr(%5level) %clr(${PID:- }){magenta} %clr(---){faint} [%applicationName] [%15.15thread] %clr([%-32X{traceId:-}-%-16X{spanId:-}]){yellow} %clr(%-40.40logger{39}){cyan} %clr(:){faint} %msg%n"
   level:
     org.hibernate: OFF
 
@@ -36,21 +39,22 @@ spring:
         default_batch_fetch_size: 10
         connection:
           autocommit: false
-#        cache:
-#          use_second_level_cache: true
-#          use_query_cache: true
-#          region.factory_class: org.hibernate.cache.jcache.internal.JCacheRegionFactory
-#        jakarta.cache:
-#          provider: org.ehcache.jsr107.EhcacheCachingProvider
-#          uri: classpath:ehcache.xml
-#      sharedCache:
-#        mode: ENABLE_SELECTIVE
+    #        cache:
+    #          use_second_level_cache: true
+    #          use_query_cache: true
+    #          region.factory_class: org.hibernate.cache.jcache.internal.JCacheRegionFactory
+    #        jakarta.cache:
+    #          provider: org.ehcache.jsr107.EhcacheCachingProvider
+    #          uri: classpath:ehcache.xml
+    #      sharedCache:
+    #        mode: ENABLE_SELECTIVE
     open-in-view: false
 
   datasource:
-    url: jdbc:postgresql://hostelDB:5432/hostelService
+    url: jdbc:otel:postgresql://hostelDB:5432/hostelService
     username: hostel
     password: ilia
+    driver-class-name: io.opentelemetry.instrumentation.jdbc.OpenTelemetryDriver
 
   flyway:
     jdbc-properties:
