--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -51,7 +51,7 @@ spring:
     open-in-view: false
 
   datasource:
-    url: jdbc:otel:postgresql://hostelDB:5432/hostelService
+    url: jdbc:postgresql://hostelDB:5432/hostelService
     username: hostel
     password: ilia
     driver-class-name: io.opentelemetry.instrumentation.jdbc.OpenTelemetryDriver
