--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -2,6 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: schedulesservice
+  labels:
+    app: spring-boot
+  annotations:
+    prometheus.io/scrape: "true"
+    prometheus.io/path: "/actuator/prometheus"
+    prometheus.io/port: "8080"
 spec:
   selector:
     app: schedulesservice
